--- a/App/Modules/Frontend/Views/tour/index.phtml
+++ b/App/Modules/Frontend/Views/tour/index.phtml
@@ -1,8 +1,35 @@
 <!--Main-->
 	<main>
-    	<div class="banner">
-        	<img src="<?php echo $this->url->getStatic(FRONT_END_DIR . 'images/banner-img.png'); ?>" class="scale" data-scale="best-fill" data-align="center" >
-        </div>
+		<!-- DYNAMIC BANNER IMAGES BEGIN -->
+		<!-- @author Algie Caballes -->
+    	<header class="header">
+			<div class="s-banner">
+				<div class="banner-caption">
+					<!--<h1>Book tickets for top attractions around the world</h1>-->
+				</div>
+				<div id="transition-timer-carousel" class="carousel slide transition-timer-carousel" data-ride="carousel">
+				<div class="carousel-inner">
+					<!-- banner images display -->
+					<?php if ($bannerImages->count() > 0): ?>
+						<?php foreach ($bannerImages as $key => $banner): ?>
+							<div class="item <?php if ($key == 0) { echo 'active'; } ?>">
+								<img src="<?php echo $banner->getBannerUri(); ?>" alt=""style="width:100%; "/>
+								<div class="carousel-caption">
+								  
+									
+								</div>
+							</div>
+						<?php endforeach; ?>
+					<?php else: ?>
+						<div class="item">
+							<img src="<?php echo $this->url->getStatic(FRONT_END_DIR . 'images/banner-img.png'); ?>"/> 
+						</div>
+					<?php endif; ?>
+				</div>
+			</div>   
+		</div>
+	</header>
+	<!-- DYNAMIC HEADER BANNER IMAGES END -->
 <div class="clearfix"></div>
         <div class="container">
         <div class="row">
