--- a/App/Modules/Frontend/Views/store/index.phtml
+++ b/App/Modules/Frontend/Views/store/index.phtml
@@ -11,7 +11,7 @@
 					<?php if ($bannerImages->count() > 0): ?>
 						<?php foreach ($bannerImages as $key => $banner): ?>
 							<div class="item <?php if ($key == 0) { echo 'active'; } ?>">
-								<img src="<?php echo $banner->getBannerUri(); ?>" alt=""style="width:100%; "/>
+								<a href="<?php echo $banner->bannerLink; ?>" target="_blank"><img src="<?php echo $banner->getBannerUri(); ?>" alt=""style="width:100%; "/></a>
 								<div class="carousel-caption">
 									<div class="carousel-caption" style="top: 0; bottom: 0;">
 										<h1><?php echo $banner->bannerCaption; ?></h1>
