fix ajax response bugs if it is already an object then dont parse it

--- a/App/Modules/Frontend/Views/tour/index.phtml
+++ b/App/Modules/Frontend/Views/tour/index.phtml
@@ -600,7 +600,13 @@ switch ($tour->tourDuration->lengthType) {
                         'selected_date': selectedDate,
                     });
                     availibilityPost.done(function (data) {
-                        var response = jQuery.parseJSON(data);
+						// @Algie Caballes - add a condition if the response is already in object, if it is a string, parse it to JSON
+						var response;
+						if (typeof data == 'object') {
+							response = data;
+						} else {
+							var response = jQuery.parseJSON(data);
+						}
                         if (response.availableForBooking) {
                             if (typeof response.timeOptions !== 'undefined') {
                                 checkAvailState = true;
