handle page links

--- a/App/Modules/Frontend/Views/layouts/common/store/header.phtml
+++ b/App/Modules/Frontend/Views/layouts/common/store/header.phtml
@@ -98,11 +98,13 @@
                  <div class="menu">
                 	<ul class="pull-right navbar-nav">
                        <!--<li><?php //echo $this->tag->linkTo('/store/page/' . $storeVendor->vendorId . '/about-us', "About"); ?></li>-->
-			  <li><a href="javascript:redirectToAboutUs('<?php echo "/".urlencode($storeVendor->businessName)."/about-us"; ?>', '<?php echo $storeVendor->vendorId; ?>')">About</a></li>
-                          <li><?php echo $this->tag->linkTo('/store/tours/' . $storeVendor->vendorId, "Our Tours"); ?></li>
+							<li><a href="javascript:redirectToPage('<?php echo "/". strtolower((preg_replace('/[\s_]/', '', $storeVendor->businessName)))."/about-us"; ?>', '<?php echo $storeVendor->vendorId; ?>')">About</a></li>
+                          <!--<li><?php //echo $this->tag->linkTo('/store/tours/' . $storeVendor->vendorId, "Our Tours"); ?></li>-->
+							<li><a href="javascript:redirectToPage('<?php echo "/". strtolower((preg_replace('/[\s_]/', '', $storeVendor->businessName)))."/our-tours"; ?>', '<?php echo $storeVendor->vendorId; ?>')">Our Tours</a></li>
                             <li><a href="#">Blog</a></li>   
-                             <li><a href="#">Gallery</a></li>
-                           <li><?php echo $this->tag->linkTo('/store/contacts/' . $storeVendor->vendorId, "Contact"); ?></li>
+                            <li><a href="#">Gallery</a></li>
+							<!--<li><?php //echo $this->tag->linkTo('/store/contacts/' . $storeVendor->vendorId, "Contact"); ?></li>-->
+							<li><a href="javascript:redirectToPage('<?php echo "/". strtolower((preg_replace('/[\s_]/', '', $storeVendor->businessName)))."/contacts"; ?>', '<?php echo $storeVendor->vendorId; ?>')">Contacts</a></li>
                          </ul>
                     </div>
                 </div>
@@ -224,7 +226,7 @@
     }*/
 </style>
 <script>
-    function redirectToAboutUs(url, vendor_id) {
+    function redirectToPage(url, vendor_id) {
     	var mapForm = document.createElement("form");
     	mapForm.method = "POST";
     	mapForm.action = url;
