modified url link

--- a/App/Modules/Frontend/Views/layouts/common/store/header.phtml
+++ b/App/Modules/Frontend/Views/layouts/common/store/header.phtml
@@ -98,9 +98,9 @@
                  <div class="menu">
                 	<ul class="pull-right navbar-nav">
                        <!--<li><?php //echo $this->tag->linkTo('/store/page/' . $storeVendor->vendorId . '/about-us', "About"); ?></li>-->
-							<li><a href="javascript:redirectToPage('<?php echo "/". strtolower((preg_replace('/[\s_]/', '', $storeVendor->businessName)))."/about-us"; ?>', '<?php echo $storeVendor->vendorId; ?>')">About</a></li>
+							<li><a href="javascript:redirectToPage('<?php echo "/". strtolower((preg_replace('/[\s_]/', '', $storeVendor->businessName)))."/aboutus"; ?>', '<?php echo $storeVendor->vendorId; ?>')">About</a></li>
                           <!--<li><?php //echo $this->tag->linkTo('/store/tours/' . $storeVendor->vendorId, "Our Tours"); ?></li>-->
-							<li><a href="javascript:redirectToPage('<?php echo "/". strtolower((preg_replace('/[\s_]/', '', $storeVendor->businessName)))."/our-tours"; ?>', '<?php echo $storeVendor->vendorId; ?>')">Our Tours</a></li>
+							<li><a href="javascript:redirectToPage('<?php echo "/". strtolower((preg_replace('/[\s_]/', '', $storeVendor->businessName)))."/ourtours"; ?>', '<?php echo $storeVendor->vendorId; ?>')">Our Tours</a></li>
                             <li><a href="#">Blog</a></li>   
                             <li><a href="#">Gallery</a></li>
 							<!--<li><?php //echo $this->tag->linkTo('/store/contacts/' . $storeVendor->vendorId, "Contact"); ?></li>-->
