form vendor id hidden field

--- a/App/Modules/Frontend/Views/store/contacts.phtml
+++ b/App/Modules/Frontend/Views/store/contacts.phtml
@@ -15,7 +15,7 @@
 
     <form id="contact-form" class="form-horizontalll" method="post">
         
-       
+      <input type="hidden" name="vendor_id" value="<?php echo $storeVendor->vendorId; ?>"/> 
 <!--<div class="form-holder clearfix">
 <select class="form-control input-field" name="">
 <option>Subject</option>
