--- a/App/Modules/Frontend/Views/store/tours.phtml
+++ b/App/Modules/Frontend/Views/store/tours.phtml
@@ -137,12 +137,12 @@
                                         </div>
                                         <?php } ?>
                                     <!--<a href="<?php #echo $groupTour->tour->getUri(); ?>"><img src="<?php #echo $groupTour->tour->getDefaultImage() ? $groupTour->tour->getDefaultImage()->getImageUri('thumb') : ''; ?>" width="253" height="225"/></a>-->
-									   <a href="javascript:redirectToPage('<?php echo "/".strtolower((preg_replace('/[\s_]/', '', $storeVendor->businessName)))."/ourtours/".$groupTour->tour->tourSlug; ?>', '<?php echo $groupTour->tourId; ?>')"><img src="<?php echo $groupTour->tour->getDefaultImage() ? $groupTour->tour->getDefaultImage()->getImageUri('thumb') : ''; ?>" width="253" height="225"/></a>
+									   <a href="javascript:redirectToPageFromTours('<?php echo "/".strtolower((preg_replace('/[\s_]/', '', $storeVendor->businessName)))."/ourtours/".$groupTour->tour->tourSlug; ?>', '<?php echo $groupTour->tourId; ?>')"><img src="<?php echo $groupTour->tour->getDefaultImage() ? $groupTour->tour->getDefaultImage()->getImageUri('thumb') : ''; ?>" width="253" height="225"/></a>
                                 </div>
                                 <div class="col-md-7">
                                     <section class="content-header">
                                         <!--<h1><a href="<?php #echo $groupTour->tour->getUri(); ?>"><?php #echo $groupTour->tour->tourTitle; ?></a></h1>-->
-										<h1><a href="javascript:redirectToPage('<?php echo "/".strtolower((preg_replace('/[\s_]/', '', $storeVendor->businessName)))."/ourtours/".$groupTour->tour->tourSlug; ?>', '<?php echo $groupTour->tourId; ?>')"><?php echo $groupTour->tour->tourTitle; ?></a></h1>
+										<h1><a href="javascript:redirectToPageFromTours('<?php echo "/".strtolower((preg_replace('/[\s_]/', '', $storeVendor->businessName)))."/ourtours/".$groupTour->tour->tourSlug; ?>', '<?php echo $groupTour->tourId; ?>')"><?php echo $groupTour->tour->tourTitle; ?></a></h1>
                                         <ul class="review">
                                             <li class="text-yellow">
                                                 <div id="star-rate-grid-<?php echo $groupTour->tour->tourId; ?>"></div>
@@ -247,7 +247,7 @@
                                     <div class="row">
                                         <div class="col-md-12">
                                             <!--<a href="<?php #echo $groupTour->tour->getUri(); ?>" class="btn-lg btn-block btn-book-tour">Book Now</a>-->
-											<a href="javascript:redirectToPage('<?php echo "/".strtolower((preg_replace('/[\s_]/', '', $storeVendor->businessName)))."/ourtours/".$groupTour->tour->tourSlug; ?>', '<?php echo $groupTour->tourId; ?>')" class="btn-lg btn-block btn-book-tour">Book Now</a>
+											<a href="javascript:redirectToPageFromTours('<?php echo "/".strtolower((preg_replace('/[\s_]/', '', $storeVendor->businessName)))."/ourtours/".$groupTour->tour->tourSlug; ?>', '<?php echo $groupTour->tourId; ?>')" class="btn-lg btn-block btn-book-tour">Book Now</a>
                                         </div>
                                         <div class="clearfix"></div>
                                     </div>
@@ -636,7 +636,7 @@ $(document).ready(function(){
     .h60 {font-size: 50px;margin-left: 35%;}
 </style>
 <script>
-    function redirectToPage(url, tour_id) {
+    function redirectToPageFromTours(url, tour_id) {
     	var mapForm = document.createElement("form");
     	mapForm.method = "POST";
     	mapForm.action = url;
